--- a/api/pom.xml
+++ b/api/pom.xml
@@ -37,6 +37,11 @@
 			<version>0.2.6</version>
 		</dependency>
 
+	<dependency>
+       <groupId>org.springframework</groupId>
+       <artifactId>spring-tx</artifactId>
+       <version>6.1.14</version>
+   	</dependency>
 
 		<dependency>
 			<groupId>javax.annotation</groupId>
