--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -9,9 +9,7 @@ spring:
   
   data:
     mongodb:
-      host: localhost
-      port: 27017
-      database: sakila_mongo
+      uri: mongodb+srv://makila:pg2mongo@makila-demo.drtak.mongodb.net/?retryWrites=true&w=majority&appName=makila-demo
   
   jpa:
     hibernate:
