commented unimplemented code and resolved naming issues

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -10,6 +10,7 @@ spring:
   data:
     mongodb:
       uri: mongodb+srv://makila:pg2mongo@makila-demo.drtak.mongodb.net/?retryWrites=true&w=majority&appName=makila-demo
+      database: makila3
   
   jpa:
     hibernate:
