adding repository annotation

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 spring:
   name: api
+  autoconfigure:
+    exclude:
+    - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
   datasource:
     postgresql:
       url: jdbc:postgresql://makila-postgres.cymtbjk7fwn8.us-east-1.rds.amazonaws.com:5432/Delistore 
