--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
       username: makila
       password: pg2mongo
       driver-class-name: org.postgresql.Driver
+      initialize: false
   
   data:
     mongodb:
