--- a/api/pom.xml
+++ b/api/pom.xml
@@ -98,6 +98,20 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<plugin>
+      <artifactId>maven-assembly-plugin</artifactId>
+      <configuration>
+        <archive>
+          <manifest>
+            <mainClass>org.makila.api.ApiApplication</mainClass>
+          </manifest>
+        </archive>
+        <descriptorRefs>
+          <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
+      </configuration>
+    </plugin>
 		</plugins>
 	</build>
 
